--- a/htdocs/main.css
+++ b/htdocs/main.css
@@ -32,6 +32,9 @@ body {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    max-height: 90vh;
+    box-sizing: border-box;
+    overflow-y: auto;
 }
 
 #my-app > div.loaded {
